--- a/css/main.scss
+++ b/css/main.scss
@@ -3,6 +3,7 @@
 @use "./layout/header";
 @use "./layout/landing";
 @use "./layout/skills";
+@use "./layout/experience";
 @use "./layout/portfolio";
 @use "./layout/contact-us";
 @use "./layout/footer";
